# personal-mcp-py

./: .gitignore  flake.nix  main.py  pyproject.toml
src/: server.py
src/personal_mcp/: __init__.py
src/personal_mcp/tools/: __init__.py  mutagen.py  youtube.py
src/tools/: mutagen.py  youtube.py
