[project]
name = "personal-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastmcp>=3.1.1",
    "mutagen>=1.47.0",
    "yt-dlp[default]>=2026.3.17",
]

[project.scripts]
personal-mcp = "personal_mcp:main"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=26.3.1",
    "isort>=8.0.1",
    "pyrefly>=0.58.0",
]
